hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__nested_type.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Ok(
    Hir {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "std",
            IdentId(2) => "S",
            IdentId(3) => "user",
            IdentId(4) => "f",
            IdentId(5) => "in",
            IdentId(6) => "core",
            IdentId(7) => "add",
            IdentId(8) => "boolean",
            IdentId(9) => "div",
            IdentId(10) => "eq",
            IdentId(11) => "ge",
            IdentId(12) => "gt",
            IdentId(13) => "le",
            IdentId(14) => "lt",
            IdentId(15) => "mul",
            IdentId(16) => "neg",
            IdentId(17) => "neq",
            IdentId(18) => "number",
            IdentId(19) => "sub",
            IdentId(20) => "void",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(1),
                    span: 6:23; [106, 109],
                    symbol_id: SymbolId(2),
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(2),
                    span: 6:27; [110, 111],
                    symbol_id: SymbolId(3),
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Block(
                    [
                        StmtId(6),
                    ],
                ),
                span: 6:30; [113, 115],
                type_id: TypeId(2),
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                        symbol_id: SymbolId(1),
                    },
                    InputId(0),
                    [
                        StmtId(2),
                        StmtId(4),
                        StmtId(5),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Struct(
                    Identifier {
                        id: IdentId(2),
                        span: 3:20; [44, 45],
                        symbol_id: SymbolId(3),
                    },
                    [],
                    Provided(
                        [],
                    ),
                    0,
                    None,
                ),
                span: 3:13; [37, 48],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Namespace(
                    Identifier {
                        id: IdentId(1),
                        span: 2:19; [19, 22],
                        symbol_id: SymbolId(2),
                    },
                    InputId(0),
                    [
                        StmtId(1),
                    ],
                ),
                span: 4:9; [57, 58],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: LetFn(
                    Identifier {
                        id: IdentId(4),
                        span: 6:17; [100, 101],
                        symbol_id: SymbolId(22),
                    },
                    [],
                    [
                        Parameter {
                            identifier: Identifier {
                                id: IdentId(5),
                                span: 6:19; [102, 104],
                                symbol_id: SymbolId(23),
                            },
                            type_def_id: TypeDefId(0),
                            span: 6:19; [102, 111],
                            type_id: TypeId(6),
                        },
                    ],
                    Return {
                        type_def_id: None,
                        typed_id: TypeId(1),
                    },
                    Provided(
                        ExprId(0),
                    ),
                    None,
                ),
                span: 6:13; [96, 115],
            },
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: Namespace(
                    Identifier {
                        id: IdentId(3),
                        span: 5:19; [77, 81],
                        symbol_id: SymbolId(4),
                    },
                    InputId(0),
                    [
                        StmtId(3),
                    ],
                ),
                span: 7:9; [124, 125],
            },
            StmtId(5) => Statement {
                id: StmtId(5),
                kind: Namespace(
                    Identifier {
                        id: IdentId(6),
                        span: 9:11; [145, 149],
                        symbol_id: SymbolId(5),
                    },
                    InputId(0),
                    [],
                ),
                span: 9:17; [151, 152],
            },
            StmtId(6) => Statement {
                id: StmtId(6),
                kind: Ret(
                    None,
                    Implicit,
                ),
                span: 6:30; [113, 115],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(0),
                        IdentRefId(1),
                    ],
                ),
                span: 6:23; [106, 111],
            },
        ],
        root: StmtId(0),
        symbols: [
            SymbolId(0) => Symbol {
                id: SymbolId(0),
                kind: NotFound,
                type_id: TypeId(0),
            },
            SymbolId(1) => Symbol {
                id: SymbolId(1),
                kind: Namespace(
                    IdentId(0),
                    {
                        IdentId(1): [
                            SymbolId(2),
                        ],
                        IdentId(3): [
                            SymbolId(4),
                        ],
                        IdentId(6): [
                            SymbolId(5),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(2) => Symbol {
                id: SymbolId(2),
                kind: Namespace(
                    IdentId(1),
                    {
                        IdentId(2): [
                            SymbolId(3),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: Struct(
                    IdentId(2),
                    StmtId(1),
                ),
                type_id: TypeId(6),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: Namespace(
                    IdentId(3),
                    {
                        IdentId(4): [
                            SymbolId(22),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: Namespace(
                    IdentId(6),
                    {
                        IdentId(7): [
                            SymbolId(21),
                        ],
                        IdentId(8): [
                            SymbolId(8),
                        ],
                        IdentId(9): [
                            SymbolId(20),
                        ],
                        IdentId(10): [
                            SymbolId(18),
                            SymbolId(19),
                        ],
                        IdentId(11): [
                            SymbolId(17),
                        ],
                        IdentId(12): [
                            SymbolId(16),
                        ],
                        IdentId(13): [
                            SymbolId(15),
                        ],
                        IdentId(14): [
                            SymbolId(14),
                        ],
                        IdentId(15): [
                            SymbolId(13),
                        ],
                        IdentId(16): [
                            SymbolId(12),
                        ],
                        IdentId(17): [
                            SymbolId(10),
                            SymbolId(11),
                        ],
                        IdentId(18): [
                            SymbolId(7),
                        ],
                        IdentId(19): [
                            SymbolId(9),
                        ],
                        IdentId(20): [
                            SymbolId(6),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: NativeType(
                    IdentId(20),
                    Void,
                ),
                type_id: TypeId(2),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: NativeType(
                    IdentId(18),
                    Number,
                ),
                type_id: TypeId(2),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: NativeType(
                    IdentId(8),
                    Boolean,
                ),
                type_id: TypeId(2),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(19),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(17),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(17),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(9),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(10),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(9),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(21) => Symbol {
                id: SymbolId(21),
                kind: Native(
                    IdentId(7),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(22) => Symbol {
                id: SymbolId(22),
                kind: LetFn(
                    IdentId(4),
                    StmtId(3),
                    [
                        TypeId(6),
                    ],
                    TypeId(1),
                ),
                type_id: TypeId(11),
            },
            SymbolId(23) => Symbol {
                id: SymbolId(23),
                kind: Parameter(
                    IdentId(5),
                    StmtId(3),
                    0,
                ),
                type_id: TypeId(6),
            },
        ],
        types: [
            TypeId(0) => Invalid,
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Type,
            TypeId(6) => Struct(
                StmtId(1),
                [],
            ),
            TypeId(7) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(8) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(9) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(10) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(11) => Function(
                [
                    TypeId(6),
                ],
                TypeId(1),
            ),
        ],
        exit_points: ExitPoints {
            exit_points: {
                ExprId(0): [
                    Implicit(
                        None,
                    ),
                ],
            },
            unreachable: [],
        },
    },
)
